First working version of autoencoder

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -19,5 +19,8 @@ repos:
             torch,
             torchvision,
             typing_extensions,
-            matplotlib
+            matplotlib,
+            equinox,
+            wandb,
+            pyyaml
           ]
