Through harmonic oscillator example for PINNs with an inverse problem as well

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -22,5 +22,6 @@ repos:
             matplotlib,
             equinox,
             wandb,
-            pyyaml
+            pyyaml,
+            diffrax
           ]
