Add t-SNE visualisation for autoencoders

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -23,5 +23,6 @@ repos:
             equinox,
             wandb,
             pyyaml,
-            diffrax
+            diffrax,
+            tsnex
           ]
