Reduce image size to 64x64 for autoencoders. Try to remove cell shape from the image

--- a/configs/malaria_autoencoder.yaml
+++ b/configs/malaria_autoencoder.yaml
@@ -6,5 +6,6 @@ hyperparams:
   nepochs: 2
   model:
     hidden_size: 2
+  remove_cell_boundary: True
 logger:
   project: deep-learning-malaria-autoencoder
